--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	</head>
 	<body>
 		<script src="js/three.min.js"></script>
+		<script src="js/dat.gui.min.js"></script>
 		<script src="js/webui.js"></script>
 	</body>
 </html>
