add ALL the images

--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
 		<style>
 			body { margin: 0; }
 			canvas { width: 100%; height: 100% }
+                        #previewImg {
+                            max-width: 300px; position: absolute;
+                            left: 0; top: 0;
+                        }
 		</style>
 	</head>
 	<body>
+		<script src="js/microajax.minified.js"></script>
 		<script src="js/three.min.js"></script>
 		<script src="js/dat.gui.min.js"></script>
 		<script src="js/webui.js"></script>
+                <div id="container"></div>
+                <img src="" id="previewImg">
 	</body>
 </html>
